examples/neg/namer/issue950/effect_operation_with_same_name.effekt
interface Greet { def sayHello(): Unit }

def helloWorld() = try {
  sayHello() // info : There is an equally named effect operation sayHello of interface Greet. Use syntax `do sayHello()` to call it..
} with Greet {
  def sayHello() = { println("Hello!"); resume(()) }
}

def main() = {
  helloWorld() // throws: Cannot typecheck call
}